Getting all operations Making the immutable serialisable so it works out of the box with Spring Boot